added an extra page, where it asks the users for confirmation to delete

--- a/apps/first_app/templates/first_app/index.html
+++ b/apps/first_app/templates/first_app/index.html
@@ -53,7 +53,7 @@
                         <td>{{x.name}}</td>
                         <td>{{x.course.description}}</td>
                         <td>{{x.created_at}}</td>
-                        <td><a href="{{x.id}}/delete">Remove</a></td>
+                        <td><a href="{{x.id}}/confirm">remove</a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
